# bss

./: LICENSE  README.md  combined_results.csv  convert-to-caleb.py  convert.py  dist_asset.csv  main.ipynb  pyproject.toml  statistics_summary.csv  statistics_summary.xlsx
data/: .~lock.imab.csv#  BNB-USD.csv  BTC-USD.csv  CMX.csv  ETH-USD.csv  EURUSD=X.csv  NYA.csv  SNP.csv  SOL-USD.csv  Statistical descriptive.csv  Statistical descriptive.numbers  Statistical descriptive.xlsx  XRP-USD.csv  bitcoin_trust.csv  ibovespa.csv  ima.csv  imab.csv  scbtg.csv  sp500.csv  statistics_summary.numbers
json/: cmx.json  gold.json  snp.json
utils/: plotter.py  reader.py
