[tool.poetry]
name = "crypto-bss"
version = "0.1.0"
description = ""
authors = ["José R. A. Figueirôa <jraf@cin.ufpe.br>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
